# research-msc

./: .gitignore  README.md
software/: README.md
software/cpp/: README.md  RUN_TEST.cpp  stAffineParamSearch.cpp  stColorGradient.cpp  stCorrespondFeatures.cpp  stGradPyramid.cpp  stGradToEdge.cpp  stHomography.h  stImageEnhance.cpp  stMutualInformation.cpp  stNeedClean.cpp  stOverlapFeatures.cpp  stStitchingParams.h  stTformSize.cpp  stTranslateSearch.cpp
software/matlab/: ALMI.m  AffineRobustness.m  AffineSearch.m  AffineTransform.m  ColorEdges.m  CreatePanorama.m  DLT.m  DetermineOverlaps.m  EE_VideoCapture.m  EdgeThreshold.m  HiddenCutline.m  HoughMATLAB.m  ImageClean.m  LGrad2Edge.m  LOG2.m  MI.m  MMR_ALMI.m  MR_ALMI.m  MR_Spline.m  MR_SplineM.m  MinErrorBoundaryCut.m  Peak2Overlap.m  Plotting.m  ProjectivePointMatch.m  ProjectiveStitch.m  README.md  RUN_PhaseI.m  RUN_PhaseII.m  RegisterImages.m  RobustnessTest.m  SimilaritySearch.m  SimilarityStitch.m  SimilarityTransform.m  TestAffine.m  WorldImages.m  Yimage.m
software/python/: .coveragerc  .envrc  .gitignore  README.md  conftest.py  pyproject.toml
software/python/tests_notebooks/: .envrc  pyproject.toml
software/python/tests_unit/: conftest.py
software/python/tests_unit/wfmi/: test_processed_image.py
software/python/wfmi/: color_gradient.py  image_pyramid.py  image_registration.py  overlap_search.py  processed_image.py
thesis/: README.md  RIT_EEME_MS_ThesisStyle.sty  TommyKeane_MS_Thesis.tex  TommyKeane_MS_Thesis_Abstract.tex  TommyKeane_MS_Thesis_Acknowledgments.tex  TommyKeane_MS_Thesis_Bibliography.bib  TommyKeane_MS_Thesis_Dedication.tex  TommyKeane_MS_Thesis_Presentation.tex  TommyKeane_MS_Thesis_Style.sty
thesis/chapters/: TommyKeane_MS_Thesis_Chapter1.tex  TommyKeane_MS_Thesis_Chapter1_Preamble.tex  TommyKeane_MS_Thesis_Chapter1_Section1.tex  TommyKeane_MS_Thesis_Chapter1_Section2.tex  TommyKeane_MS_Thesis_Chapter1_Section3.tex  TommyKeane_MS_Thesis_Chapter1_Section4.tex  TommyKeane_MS_Thesis_Chapter1_Section5.tex  TommyKeane_MS_Thesis_Chapter1_Section6.tex  TommyKeane_MS_Thesis_Chapter2.tex  TommyKeane_MS_Thesis_Chapter2_Section1.tex  TommyKeane_MS_Thesis_Chapter2_Section2.tex  TommyKeane_MS_Thesis_Chapter2_Section3.tex  TommyKeane_MS_Thesis_Chapter2_Section4.tex  TommyKeane_MS_Thesis_Chapter2_Section5.tex  TommyKeane_MS_Thesis_Chapter3.tex  TommyKeane_MS_Thesis_Chapter3_Preamble.tex  TommyKeane_MS_Thesis_Chapter3_Section1.tex  TommyKeane_MS_Thesis_Chapter3_Section1_1.tex  TommyKeane_MS_Thesis_Chapter3_Section1_2.tex  (+20 more)
(+3 files in other folders)
