[tool.poetry]
name = "wfmi-noteboks"
version = "1.0.0"
description = "Jupyter Notebooks for wfmi Custom Python Package"
authors = [
    "Tommy P. Keane <talk.to.tommypkeane@gmail.com>",
]
maintainers = [
    "Tommy P. Keane <talk.to.tommypkeane@gmail.com>",
]
homepage = "https://www.tommypkeane.com"
repository = "https://github.com/tommypkeane/research-msc"
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
wfmi = {path = "../", develop = true}
jupyterlab = "^3.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
hypothesis = "^6.68.2"
isort = "^5.12.0"

[tool.isort]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
no_lines_before = "LOCALFOLDER"
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "7.0"
console_output_style = "percent"
log_auto_indent = true
log_level = "DEBUG"
log_cli = false  # Set true if you wanna see the logs live, otherwise look at `log_file`
log_cli_level = "DEBUG"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S%z (%Z)"
log_cli_format = "%(asctime)s :: %(name)s :: %(levelname)s :: %(message)s"
addopts = "--cov"
testpaths = [
    "tests_unit",
]
